fixed bug in grunt-file

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <title>Wapik</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" href="/teamtreehouse/public/css/main.css"/>
+    <link rel="stylesheet" href="/wapik/public/css/main.css"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,300" rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <div class="wrapper">
       <div class="bg"></div>
       <div class="content">
-        <div class="header-nav"> <a href="/teamtreehouse/" class="logo">
+        <div class="header-nav"> <a href="/wapik/" class="logo">
             <h1>wapik</h1></a>
           <p> <span class="phone-icon"> </span>+375 44 545 67 98 </p>
-          <div class="links"><a href="/teamtreehouse/" class="active">главная</a><a href="/teamtreehouse/about.html">о нас</a><a href="/teamtreehouse/pricing.html">цены</a><a href="/teamtreehouse/contacts.html">контакты</a><a href="/teamtreehouse/#" class="button button-normal button-grey">начать</a></div>
+          <div class="links"><a href="/wapik/" class="active">главная</a><a href="/wapik/about.html">о нас</a><a href="/wapik/pricing.html">цены</a><a href="/wapik/contacts.html">контакты</a><a href="/wapik/#" class="button button-normal button-grey">начать</a></div>
         </div>
         <div class="site-header">
           <h1>Вас приветствует Wapik</h1>
@@ -27,22 +27,22 @@
         <div class="features">
           <h1>Лучшее из наших возможностей</h1>
           <p class="center intro-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis eveniet animi dolorem.</p>
-          <div class="cols col-4 center"><img src="/teamtreehouse/public/img/ion-icon.png"/>
+          <div class="cols col-4 center"><img src="/wapik/public/img/ion-icon.png"/>
             <h3>Иконки</h3>
             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam doloribus labore, facere ut repudiandae animi.</p>
           </div>
-          <div class="cols col-4 center"><img src="/teamtreehouse/public/img/bottle-icon.png"/>
+          <div class="cols col-4 center"><img src="/wapik/public/img/bottle-icon.png"/>
             <h3>Креативный дизайн</h3>
             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia delectus totam sequi rem labore quidem dolores debitis ratione nobis sed.</p>
           </div>
-          <div class="cols col-4 center"><img src="/teamtreehouse/public/img/sketches-icon.png"/>
+          <div class="cols col-4 center"><img src="/wapik/public/img/sketches-icon.png"/>
             <h3>Эскизы </h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore, doloremque odit vel accusantium illo magnam!</p>
           </div>
         </div>
       </div>
-    </div><a href="/teamtreehouse/about.html">О нас</a><a href="/teamtreehouse/contacts.html">Контакты</a>
+    </div><a href="/wapik/about.html">О нас</a><a href="/wapik/contacts.html">Контакты</a>
   </body>
-  <script src="/teamtreehouse/public/js/jquery-2.2.0.min.js"></script>
-  <script src="/teamtreehouse/public/js/my_scripts.js"></script>
+  <script src="/wapik/public/js/jquery-2.2.0.min.js"></script>
+  <script src="/wapik/public/js/my_scripts.js"></script>
 </html>
