--- a/pricing.html
+++ b/pricing.html
@@ -4,7 +4,7 @@
     <title>Wapik</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" href="/teamtreehouse/public/css/main.css"/>
+    <link rel="stylesheet" href="/wapik/public/css/main.css"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,300" rel="stylesheet" type="text/css"/>
   </head>
   <body>
