--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <div class="wrapper">
       <div class="bg"></div>
       <div class="content">
-        <div class="header-nav"> <a href="/wapik/" class="logo">
-            <h1>wapik</h1></a>
-          <p> <span class="phone-icon"> </span>+375 44 545 67 98 </p>
-          <div class="links"><a href="/wapik/" class="active">главная</a><a href="/wapik/views/pages/about.html">о нас</a><a href="/wapik/views/pages/pricing.html">цены</a><a href="/wapik/views/pages/contacts.html">контакты</a><a href="/wapik/#" class="button button-normal button-grey">начать</a></div>
+        <div class="header-nav"> 
+          <div class="logo-block"><a href="/wapik/" class="logo">
+              <h1>wapik</h1></a>
+            <p> <span class="phone-icon"> </span>+375 44 545 67 98 </p>
+          </div>
+          <div class="links"><a href="/wapik/" class="active">главная</a><a href="/wapik/about.html">о нас</a><a href="/wapik/pricing.html">цены</a><a href="/wapik/contacts.html">контакты</a><a href="/wapik/#" class="button button-normal button-grey">начать</a></div>
         </div>
         <div class="site-header">
           <h1>Вас приветствует Wapik</h1>
