--- a/index.html
+++ b/index.html
@@ -5,19 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charset="UTF-8"/>
     <link rel="stylesheet" href="/wapik/public/css/main.css"/>
+    <link rel="stylesheet" href="/wapik/public/css/icons.css"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,300" rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <div class="wrapper">
-      <div class="bg"></div>
-      <div class="content">
-        <div class="header-nav"> 
-          <div class="logo-block"><a href="/wapik/" class="logo">
-              <h1>wapik</h1></a>
-            <p> <span class="phone-icon"> </span>+375 44 545 67 98 </p>
-          </div>
-          <div class="links"><a href="/wapik/" class="active">главная</a><a href="/wapik/about.html">о нас</a><a href="/wapik/pricing.html">цены</a><a href="/wapik/contacts.html">контакты</a><a href="/wapik/#" class="button button-normal button-grey">начать</a></div>
+      <div class="bg">			</div>
+      <div class="header-nav clearfix"> 
+        <div class="logo-block"><a href="/wapik/" class="logo">
+            <h1>wapik</h1></a>
+          <p> <span class="phone-icon"> </span>+375 44 545 67 98 </p>
         </div>
+        <div id="touch-menu"><span class="glyphicon glyphicon-align-justify"></span></div>
+        <nav>
+          <ul class="nav clearfix">
+            <li><a href="/wapik/" class="active">главная</a></li>
+            <li><a href="/wapik/about.html">о нас</a></li>
+            <li><a href="/wapik/pricing.html">цены</a></li>
+            <li><a href="/wapik/contacts.html">контакты</a></li>
+            <li><a href="/wapik/#" class="nav-button button-grey">начать</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="content">		
         <div class="site-header">
           <h1>Вас приветствует Wapik</h1>
           <p>Wapik - это многоцелевой шаблон с современным и простым дизайном. Wapik - идеальный шаблон для вас!</p><a href="#" class="button button-large button-green">Узнать больше</a>
