changed root path

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <div class="wrapper">
       <div class="bg">			</div>
       <div class="header-nav clearfix"> 
-        <div class="logo-block"><a href="/wapik/" class="logo">
+        <div class="logo-block"><a href="/wapik/pages/" class="logo">
             <h1>wapik</h1></a>
           <p> <span class="phone-icon"> </span>+375 44 545 67 98 </p>
         </div>
         <div id="touch-menu"><span class="glyphicon glyphicon-align-justify"></span></div>
         <nav>
           <ul class="nav clearfix">
-            <li><a href="/wapik/" class="active">главная</a></li>
-            <li><a href="/wapik/about.html">о нас</a></li>
-            <li><a href="/wapik/pricing.html">цены</a></li>
-            <li><a href="/wapik/contacts.html">контакты</a></li>
-            <li><a href="/wapik/#" class="nav-button button-grey">начать</a></li>
+            <li><a href="/wapik/pages/" class="active">главная</a></li>
+            <li><a href="/wapik/pages/about.html">о нас</a></li>
+            <li><a href="/wapik/pages/pricing.html">цены</a></li>
+            <li><a href="/wapik/pages/contacts.html">контакты</a></li>
+            <li><a href="/wapik/pages/#" class="nav-button button-grey">начать</a></li>
           </ul>
         </nav>
       </div>
@@ -53,7 +53,7 @@
           </div>
         </div>
       </div>
-    </div><a href="/wapik/about.html">О нас</a><a href="/wapik/contacts.html">Контакты</a>
+    </div><a href="/wapik/pages/about.html">О нас</a><a href="/wapik/pages/contacts.html">Контакты</a>
   </body>
   <script src="/wapik/public/js/jquery-2.2.0.min.js"></script>
   <script src="/wapik/public/js/my_scripts.js"></script>
